--- a/Server/package.json
+++ b/Server/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^10.0.0"
   },
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "test": "nodemon test.js"
   },
   "author": "",
   "license": "ISC"
