--- a/App/instagram/pubspec.yaml
+++ b/App/instagram/pubspec.yaml
@@ -51,8 +51,9 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   scrollable_positioned_list: ^0.2.3
   adaptive_theme: ^2.3.1
+  cached_network_image: 
 
-
+  
 
 dev_dependencies:
   flutter_test:
