--- a/Server/package.json
+++ b/Server/package.json
@@ -15,7 +15,9 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^3.0.0",
     "mongoose": "^6.3.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16"
   }
 }
