--- a/App/instagram/pubspec.yaml
+++ b/App/instagram/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
   google_fonts: 2.2.0
   material_floating_search_bar: ^0.3.6
   tiktoklikescroller: ^0.1.8
@@ -52,8 +53,8 @@ dependencies:
   scrollable_positioned_list: ^0.2.3
   adaptive_theme: ^2.3.1
   cached_network_image: 
+  internet_connection_checker: 
 
-  
 
 dev_dependencies:
   flutter_test:
@@ -79,8 +80,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - assets/images/
-
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -93,10 +94,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: MyFlutterApp
-      fonts:
-        - asset: assets/fonts/MyFlutterApp.ttf
+  # fonts:
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
